fiture gap correction

--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ h4.more-about i{
 
 /* feature */
 .extra-feature{
-    margin-top: 5git0px;
+    margin-top: 50px;
 }
 .feature-wrap{
     display: grid;
